# wlspeech

./: README.md  main.c  meson.build
protocol/: meson.build
